MGS-713 BUGFIX increase date picker SELECT font size to prevent auto zoom on mobile devices

--- a/resources/scss/components/_plugin.pikaday.scss
+++ b/resources/scss/components/_plugin.pikaday.scss
@@ -101,7 +101,7 @@
 .pika-select {
   background: $color__white;
   color: $color__grey--text;
-  font-size: $base-font-size;
+  font-size: 16px;
   font-weight: normal;
 }
 
